# ChangeLog for app-shells/bash
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-shells/bash/ChangeLog,v 1.284 2011/03/03 21:18:30 vapier Exp $

  03 Mar 2011; Mike Frysinger <vapier@gentoo.org> bash-4.2_p6.ebuild,
  +files/bash-4.2-expand-string-unsplit.patch:
  Add fix from upstream for quoting issues.

*bash-4.2_p6 (02 Mar 2011)

  02 Mar 2011; Mike Frysinger <vapier@gentoo.org> +bash-4.2_p6.ebuild:
  Version bump.

  01 Mar 2011; Mike Frysinger <vapier@gentoo.org> bash-4.2_p5.ebuild,
  +files/bash-4.2-chkexport.patch:
  Add fix from upstream for brown bag bug in patch005.

*bash-4.2_p5 (01 Mar 2011)

  01 Mar 2011; Mike Frysinger <vapier@gentoo.org> +bash-4.2_p5.ebuild:
  Version bump.

  28 Feb 2011; Brent Baude <ranger@gentoo.org> bash-4.1_p9.ebuild:
  stable ppc64, bug 352383

*bash-4.1_p10 (28 Feb 2011)

  28 Feb 2011; Mike Frysinger <vapier@gentoo.org> +bash-4.1_p10.ebuild:
  Version bump #356513 by Lars Wendler.

  19 Feb 2011; Mike Frysinger <vapier@gentoo.org> files/bashrc:
  Touch up by Evert for HOME replacement in PROMPT_PROMPT_COMMAND #354719.

  19 Feb 2011; Mike Frysinger <vapier@gentoo.org> bash-4.2.ebuild,
  +files/bash-4.2-patmatch.patch, +files/bash-4.2-rhs-split.patch,
  +files/bash-4.2-vidomove.patch:
  Add some fixes from upstream.

*bash-4.2 (15 Feb 2011)

  15 Feb 2011; Mike Frysinger <vapier@gentoo.org> +bash-4.2.ebuild:
  Version bump.

  06 Feb 2011; Mart Raudsepp <leio@gentoo.org> bash-3.1_p17.ebuild:
  Drop to ~mips

  06 Feb 2011; Mike Frysinger <vapier@gentoo.org> bash-3.2_p51.ebuild,
  bash-4.0_p38.ebuild:
  Drop USE=examples in older versions #251319 by Robert Buchholz.

  30 Jan 2011; Raúl Porcel <armin76@gentoo.org> bash-4.1_p9.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #352383

  27 Jan 2011; Brent Baude <ranger@gentoo.org> bash-4.1_p9.ebuild:
  stable ppc, bug 352383

  25 Jan 2011; Jeroen Roovers <jer@gentoo.org> bash-4.1_p9.ebuild: