@@ -1,6 +1,11 @@
 # ChangeLog for app-shells/bash
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/bash/ChangeLog,v 1.284 2011/03/03 21:18:30 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-shells/bash/ChangeLog,v 1.285 2011/03/06 20:43:40 vapier Exp $
+
+*bash-4.2_p7 (06 Mar 2011)
+
+  06 Mar 2011; Mike Frysinger <vapier@gentoo.org> +bash-4.2_p7.ebuild:
+  Version bump + move into ~arch.
 
   03 Mar 2011; Mike Frysinger <vapier@gentoo.org> bash-4.2_p6.ebuild,
   +files/bash-4.2-expand-string-unsplit.patch:
